Start to populate out the alternate product layout.

--- a/themes/base/templates/product/show-alt.twig
+++ b/themes/base/templates/product/show-alt.twig
@@ -8,25 +8,24 @@
 {% block content %}
 <div class="row">
     <div class="medium-6 columns">
-        <img class="thumbnail" src="http://placehold.it/650x350">
+        <img class="thumbnail" src="{{ product.defaultImage }}">
+        {% if product.images is not empty %}
         <div class="row small-up-4">
-            <div class="column">
-                <img class="thumbnail" src="http://placehold.it/250x200">
-            </div>
-            <div class="column">
-                <img class="thumbnail" src="http://placehold.it/250x200">
-            </div>
-            <div class="column">
-                <img class="thumbnail" src="http://placehold.it/250x200">
-            </div>
-            <div class="column">
-                <img class="thumbnail" src="http://placehold.it/250x200">
-            </div>
+            {% for image in product.images %}
+                {% if image.path != product.defaultImage %}
+                    <div class="column">
+                        <img class="thumbnail" src="{{ image.pathUrl }}">
+                    </div>
+                {% endif %}
+            {% endfor %}
         </div>
+        {% endif %}
     </div>
     <div class="medium-6 large-5 columns">
         <h3>{{ product.name }}</h3>
         <p>{{ product.description }}</p>
+
+        <p>{{ product.price.quantityPrice | displayPrice }}</p>
 
         <label>Size
             <select>
@@ -42,16 +41,18 @@
                 <label for="middle-label" class="middle">Quantity</label>
             </div>
             <div class="small-9 columns">
-                <input type="text" id="middle-label" placeholder="One fish two fish">
+                <input type="number" id="middle-label" value="1" min="0" max="{{ product.quantity }}">
             </div>
         </div>
 
-        <a href="#" class="button large expanded">Buy Now</a>
+        {% if product.isInStock %}
+            <a href="#" class="button expanded">Buy Now</a>
+        {% endif %}
 
         <div class="small secondary expanded button-group">
-            <a class="button">Facebook</a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u={{ product.fullUrl }}"
+               class="button">Facebook</a>
             <a class="button">Twitter</a>
-            <a class="button">Yo</a>
         </div>
     </div>
 </div>
@@ -59,11 +60,13 @@
 <div class="column row">
     <hr>
     <ul class="tabs" data-tabs id="example-tabs">
-        <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">Reviews</a></li>
-        <li class="tabs-title"><a href="#panel2">Similar Products</a></li>
+        <li class="tabs-title is-active"><a href="#lk-reviews-tab" aria-selected="true">Reviews</a></li>
+        {% if relatedProducts is not empty %}
+        <li class="tabs-title"><a href="#lk-related-products-tab">Similar Products</a></li>
+        {% endif %}
     </ul>
     <div class="tabs-content" data-tabs-content="example-tabs">
-        <div class="tabs-panel is-active" id="panel1">
+        <div class="tabs-panel is-active" id="lk-reviews-tab">
             <h4>Reviews</h4>
             <div class="media-object stack-for-small">
                 <div class="media-object-section">
@@ -98,40 +101,12 @@
             </label>
             <button class="button">Submit Review</button>
         </div>
-        <div class="tabs-panel" id="panel2">
-            <div class="row medium-up-3 large-up-5">
-                <div class="column">
-                    <img class="thumbnail" src="http://placehold.it/350x200">
-                    <h5>Other Product <small>$22</small></h5>
-                    <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
-                    <a href="#" class="button hollow tiny expanded">Buy Now</a>
-                </div>
-                <div class="column">
-                    <img class="thumbnail" src="http://placehold.it/350x200">
-                    <h5>Other Product <small>$22</small></h5>
-                    <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
-                    <a href="#" class="button hollow tiny expanded">Buy Now</a>
-                </div>
-                <div class="column">
-                    <img class="thumbnail" src="http://placehold.it/350x200">
-                    <h5>Other Product <small>$22</small></h5>
-                    <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
-                    <a href="#" class="button hollow tiny expanded">Buy Now</a>
-                </div>
-                <div class="column">
-                    <img class="thumbnail" src="http://placehold.it/350x200">
-                    <h5>Other Product <small>$22</small></h5>
-                    <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
-                    <a href="#" class="button hollow tiny expanded">Buy Now</a>
-                </div>
-                <div class="column">
-                    <img class="thumbnail" src="http://placehold.it/350x200">
-                    <h5>Other Product <small>$22</small></h5>
-                    <p>In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam.</p>
-                    <a href="#" class="button hollow tiny expanded">Buy Now</a>
-                </div>
-            </div>
-        </div>
+
+        {% if relatedProducts is not empty %}
+            {% embed "helper/product_grid_small-alt.twig" with {'products': relatedProducts, 'lg_slim': true } only %}
+            {% endembed %}
+        {% endif %}
+
     </div>
 </div>
 {% endblock %}
