--- a/themes/base/templates/layout/parts/topbar.twig
+++ b/themes/base/templates/layout/parts/topbar.twig
@@ -2,17 +2,10 @@
     <div class="row">
         <div class="top-bar-left">
             <ul class="dropdown menu" data-dropdown-menu>
-                <li class="menu-text">{{ SITE_NAME }}</li>
-                <li class="has-submenu">
-                    <a href="#">One</a>
-                    <ul class="submenu menu vertical" data-submenu>
-                        <li><a href="#">One</a></li>
-                        <li><a href="#">Two</a></li>
-                        <li><a href="#">Three</a></li>
-                    </ul>
+                <li class="menu-text">
+                    <a href="/">{{ SITE_NAME ?? 'Zen Kommerce' }}</a>
                 </li>
-                <li><a href="#">Two</a></li>
-                <li><a href="#">Three</a></li>
+                <li><a href="/dummyData/createDummyProduct">DummyProduct</a></li>
             </ul>
         </div>
         <div class="top-bar-right">
