--- a/themes/base/templates/product/show-alt.twig
+++ b/themes/base/templates/product/show-alt.twig
@@ -68,6 +68,8 @@
     <div class="tabs-content" data-tabs-content="example-tabs">
         <div class="tabs-panel is-active" id="lk-reviews-tab">
             <h4>Reviews</h4>
+            {# Add 4 dummy reviews #}
+            {% for reviews in 0..3 %}
             <div class="media-object stack-for-small">
                 <div class="media-object-section">
                     <img class="thumbnail" src="http://placehold.it/200x200">
@@ -77,24 +79,8 @@
                     <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
                 </div>
             </div>
-            <div class="media-object stack-for-small">
-                <div class="media-object-section">
-                    <img class="thumbnail" src="http://placehold.it/200x200">
-                </div>
-                <div class="media-object-section">
-                    <h5>Mike Stevenson</h5>
-                    <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you</p>
-                </div>
-            </div>
-            <div class="media-object stack-for-small">
-                <div class="media-object-section">
-                    <img class="thumbnail" src="http://placehold.it/200x200">
-                </div>
-                <div class="media-object-section">
-                    <h5>Mike Stevenson</h5>
-                    <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you</p>
-                </div>
-            </div>
+            {% endfor %}
+
             <label>
                 My Review
                 <textarea placeholder="None"></textarea>
