Adding flash message.

--- a/themes/base/templates/layout/base.twig
+++ b/themes/base/templates/layout/base.twig
@@ -5,6 +5,7 @@
 </head>
 <body>
     {% include 'layout/parts/header.twig' %}
+    {% include 'layout/parts/flash_messages.twig' %}
     {% include 'layout/parts/breadcrumbs.twig' %}
     <div id="body">
         {% block content %}{% endblock %}
