--- a/themes/base/templates/layout/parts/flash_messages.twig
+++ b/themes/base/templates/layout/parts/flash_messages.twig
@@ -1,28 +1,30 @@
 {# @var flashMessages array #}
-<div id="messages">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                {% for type, messages in flashMessages %}
-                    {% for message in messages %}
-                        <div class="alert alert-{{ type }}">
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+{% if flashMessages is not empty %}
+    <div id="messages">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1">
+                    {% for type, messages in flashMessages %}
+                        {% for message in messages %}
+                            <div class="alert alert-{{ type }}">
+                                <button type="button" class="close" data-dismiss="alert">&times;</button>
 
-                            {% if type == 'success' %}
-                                <i class="glyphicon glyphicon-ok-sign"></i>
-                            {% elseif type == 'info' %}
-                                <i class="glyphicon glyphicon-info-sign"></i>
-                            {% elseif type == 'warning' %}
-                                <i class="glyphicon glyphicon-warning-sign"></i>
-                            {% elseif type == 'danger' or type == 'error' %}
-                                <i class="glyphicon glyphicon-exclamation-sign"></i>
-                            {% endif %}
+                                {% if type == 'success' %}
+                                    <i class="glyphicon glyphicon-ok-sign"></i>
+                                {% elseif type == 'info' %}
+                                    <i class="glyphicon glyphicon-info-sign"></i>
+                                {% elseif type == 'warning' %}
+                                    <i class="glyphicon glyphicon-warning-sign"></i>
+                                {% elseif type == 'danger' or type == 'error' %}
+                                    <i class="glyphicon glyphicon-exclamation-sign"></i>
+                                {% endif %}
 
-                            {{ message }}
-                        </div>
+                                {{ message }}
+                            </div>
+                        {% endfor %}
                     {% endfor %}
-                {% endfor %}
+                </div>
             </div>
         </div>
     </div>
-</div>
+{% endif %}
