Adding checkout template.

--- a/themes/base/templates/layout/base.twig
+++ b/themes/base/templates/layout/base.twig
@@ -11,6 +11,6 @@
         {% block content %}{% endblock %}
     </div>
     {% include 'layout/parts/base_modal.twig' %}
-    {% include 'layout/parts/footer.twig' %}
+    {% include 'layout/parts/footer-checkout.twig' %}
 </body>
 </html>
