Adding apply coupon.

--- a/themes/base/templates/cart/show.twig
+++ b/themes/base/templates/cart/show.twig
@@ -144,7 +144,7 @@
                         <?php } ?>
                     #}
                     <br>
-                    <form action="cart/apply_coupon" method="post">
+                    <form action="cart/apply-coupon" method="post">
                         <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
 
                         <div class="input-group">
