--- a/themes/base/templates/layout/parts/flash_messages.twig
+++ b/themes/base/templates/layout/parts/flash_messages.twig
@@ -15,7 +15,7 @@
                                     <i class="glyphicon glyphicon-info-sign"></i>
                                 {% elseif type == 'warning' %}
                                     <i class="glyphicon glyphicon-warning-sign"></i>
-                                {% elseif type == 'danger' or type == 'error' %}
+                                {% elseif type == 'danger' %}
                                     <i class="glyphicon glyphicon-exclamation-sign"></i>
                                 {% endif %}
 
