--- a/themes/base/templates/cart/show.twig
+++ b/themes/base/templates/cart/show.twig
@@ -102,7 +102,7 @@
 
                                                 <span class="cart-remove-item">
                                                     <button type="submit" class="btn btn-link btn-xs">
-                                                        <i class="glyphicon glyphicon-trash"></i>
+                                                        <i class="fa fa-trash"></i>
                                                         Remove item
                                                     </button>
                                                 </span>
