--- a/themes/base/templates/product/show.twig
+++ b/themes/base/templates/product/show.twig
@@ -165,7 +165,7 @@
                                 <a  href="https://www.facebook.com/sharer/sharer.php?u={{ product.fullUrl }}"
                                     class="btn btn-primary btn-xs facebook-share"
                                     target="_blank">
-                                    <i class="glyphicon glyphicon-share"></i> Share on Facebook</a>
+                                    <i class="fa fa-share"></i> Share on Facebook</a>
                                 </a>
                             </div>
                         </div>
