--- a/themes/base/templates/cart/added.twig
+++ b/themes/base/templates/cart/added.twig
@@ -96,7 +96,7 @@
 
                                 <input type="hidden" name="id" value="<?=$cartItem->id->getHex()?>" />
                                 <input type="hidden" name="quantity" value="<?=$productQuantityDiscount->quantity?>" />
-                                <button type="submit" class="btn btn-success"><i class="glyphicon glyphicon-shopping-cart"></i>
+                                <button type="submit" class="btn btn-success"><i class="fa fa-shopping-cart"></i>
                                     Add <?=$number_more?> more
                                 </button>
                                 <?php if ($price_each > 0) { ?>
@@ -119,7 +119,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="pull-right">
-                                    <a class="btn btn-default" href="/cart"><i class="glyphicon glyphicon-shopping-cart"></i> View Cart</a>
+                                    <a class="btn btn-default" href="/cart"><i class="fa fa-shopping-cart"></i> View Cart</a>
 
                                     {% embed "helper/checkout_button.twig" only %}{% endembed %}
                                 </div>
