--- a/themes/base/templates/layout/parts/header.twig
+++ b/themes/base/templates/layout/parts/header.twig
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <i class="glyphicon glyphicon-align-justify"></i>
+                    <i class="fa fa-align-justify"></i>
                 </button>
                 <a class="navbar-brand" href="/">{{ SITE_NAME }}</a>
             </div>
@@ -18,7 +18,7 @@
 
                     <li>
                         <a href="/cart">
-                            <i class="glyphicon glyphicon-shopping-cart"></i>
+                            <i class="fa fa-shopping-cart"></i>
                             Cart
                         </a>
                     </li>
@@ -38,7 +38,7 @@
 
                             <div class="input-group-btn">
                                 <button type="submit" class="btn btn-default search-button">
-                                    <i class="glyphicon glyphicon-search"></i>
+                                    <i class="fa fa-search"></i>
                                 </button>
                             </div>
                         </div>
