--- a/themes/base-foundation/templates/helper/product_grid.twig
+++ b/themes/base-foundation/templates/helper/product_grid.twig
@@ -1,5 +1,5 @@
 {% for product in products %}
-<div class="product-container col-md-3 col-sm-4 col-xs-6">
+<div class="product-container medium-3 small-4 small-6 columns">
     <a href="{{ product.url }}">
         {% if product.defaultImage is empty %}
             <img src="http://lorempixel.com/640/480" style="height: 160px">
