--- a/themes/base-foundation/templates/helper/recommended_products.twig
+++ b/themes/base-foundation/templates/helper/recommended_products.twig
@@ -1,6 +1,6 @@
 {% if products is not empty %}
     <div class="row">
-        <div class="col-sm-12">
+        <div class="small-12 columns">
             <hr />
             <h2 class="text-center">{% block title %}You Might Also Like{% endblock %}</h2>
             {% if size == 'small' %}
