--- a/themes/base-foundation/templates/layout/parts/flash_messages.twig
+++ b/themes/base-foundation/templates/layout/parts/flash_messages.twig
@@ -3,7 +3,7 @@
     <div id="messages">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-10 col-md-offset-1">
+                <div class="medium-10 medium-offset-1 columns">
                     {% for type, messages in flashMessages %}
                         {% for message in messages %}
                             <div class="alert alert-{{ type }}">
