--- a/themes/base-foundation/templates/layout/parts/footer-checkout.twig
+++ b/themes/base-foundation/templates/layout/parts/footer-checkout.twig
@@ -1,7 +1,7 @@
 <div id="footer">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12" id="checkout-footer">
+            <div class="column" id="checkout-footer">
                 <a href="/conditions">Conditions of Use</a>
                 | <a href="/privacy">Privacy</a>
                 {# TODO: <?=SITE_COPY?> #}
