--- a/themes/base-foundation/templates/checkout/pay.twig
+++ b/themes/base-foundation/templates/checkout/pay.twig
@@ -15,7 +15,7 @@
     <div id="checkout">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="small-6 columns">
                     <h2>Order Summary</h2>
                     <table class="table">
                         <thead>
@@ -111,21 +111,21 @@
                         </tbody>
                     </table>
                     <div class="row">
-                        <div class="col-sm-11 col-sm-offset-1" id="totals_container">
+                        <div class="small-11 small-offset-1 columns" id="totals_container">
                             {% embed "cart/parts/totals.twig" %}{% endembed %}
                         </div>
                     </div>
                     {% if cart.shipmentRate.deliveryMethod is not null %}
                         <div class="row">
-                            <div class="col-sm-11 col-sm-offset-1">
+                            <div class="small-11 small-offset-1 columns">
                                 {# TODO:
-                                    <?=View::factory('cart/modify_zipcode_button')->set('class', 'btn btn-default btn-sm')->render()?>
+                                    <?=View::factory('cart/modify_zipcode_button')->set('class', 'button default btn-sm')->render()?>
                                 #}
                             </div>
                         </div>
                     {% endif %}
                 </div>
-                <div class="col-sm-6">
+                <div class="small-6 columns">
                     <form action="/checkout/pay" method="post" id="main-form" class="form" role="form">
                         <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
 
@@ -136,7 +136,7 @@
                         <h2>Shipping</h2>
                         <div class="well">
                             <div class="row">
-                                <div class="form-group col-sm-6">
+                                <div class="form-group small-6 columns">
                                     <label for="shipping-firstName" class="control-label">First Name</label>
                                     <input type="text"
                                            name="shipping[firstName]"
@@ -146,7 +146,7 @@
                                            required=""
                                            autofocus="">
                                 </div>
-                                <div class="form-group col-sm-6">
+                                <div class="form-group small-6 columns">
                                     <label for="shipping-lastName" class="control-label">Last Name</label>
                                     <input type="text"
                                            name="shipping[lastName]"
@@ -158,7 +158,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-12">
+                                <div class="form-group small-12 columns">
                                     <label for="shipping-company" class="control-label">Company Name <small class="text-muted">(optional)</small></label>
                                     <input type="text"
                                            name="shipping[company]"
@@ -169,7 +169,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-12">
+                                <div class="form-group small-12 columns">
                                     <label for="shipping-address1" class="control-label">Street Address</label>
                                     <input type="text"
                                            name="shipping[address1]"
@@ -181,7 +181,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-12">
+                                <div class="form-group small-12 columns">
                                     <label for="shipping-address2" class="control-label">Street Address 2 <small class="text-muted">(optional)</small></label>
                                     <input type="text"
                                            name="shipping[address2]"
@@ -192,7 +192,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-12">
+                                <div class="form-group small-12 columns">
                                     <label class="radio-inline">
                                         <?=Form::checkbox('shipping[isResidential]', NULL, (bool) Arr::get($shipping, 'isResidential', true), [
                                                 'id' => 'shipping-isResidential',
@@ -203,7 +203,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-4">
+                                <div class="form-group small-4 columns">
                                     <label for="shipping-city" class="control-label">City</label>
                                     <input type="text"
                                            name="shipping[city]"
@@ -212,7 +212,7 @@
                                            class="form-control"
                                            required="">
                                 </div>
-                                <div class="form-group col-sm-4">
+                                <div class="form-group small-4 columns">
                                     <label for="shipping-state" class="control-label">State</label>
                                     <input type="text"
                                            name="shipping[state]"
@@ -221,7 +221,7 @@
                                            class="form-control"
                                            required="">
                                 </div>
-                                <div class="form-group col-sm-4">
+                                <div class="form-group small-4 columns">
                                     <label for="shipping-zip5" class="control-label">Zipcode</label>
                                     <input type="text"
                                            name="shipping[zip5]"
@@ -233,7 +233,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="form-group col-sm-6">
+                                <div class="form-group small-6 columns">
                                     <label for="shipping-phone" class="control-label">Phone Number</label>
                                     <input type="text"
                                            name="shipping[phone]"
@@ -242,7 +242,7 @@
                                            class="form-control"
                                            required="">
                                 </div>
-                                <div class="form-group col-sm-6">
+                                <div class="form-group small-6 columns">
                                     <label for="shipping-email" class="control-label">Email Address</label>
                                     <input type="email"
                                            name="shipping[email]"
@@ -259,7 +259,7 @@
                             <div class="well" id="billing-well">
                                 <span class="payment-errors"></span>
                                 <div class="row">
-                                    <div class="form-group col-sm-8">
+                                    <div class="form-group small-8 columns">
                                         <label for="creditCard-name" class="control-label">Name on Card</label>
                                         <input type="text"
                                                name="creditCard[name]"
@@ -268,7 +268,7 @@
                                                class="form-control"
                                                required="">
                                     </div>
-                                    <div class="form-group col-sm-4">
+                                    <div class="form-group small-4 columns">
                                         <label for="creditCard-zip5" class="control-label">Zipcode</label>
                                         <input type="text"
                                                name="creditCard[zip5]"
@@ -280,7 +280,7 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="form-group col-sm-9">
+                                    <div class="form-group small-9 columns">
                                         <label for="creditCard-number" class="control-label">Card Number</label>
                                         <input type="text"
                                                name="creditCard[number]"
@@ -290,7 +290,7 @@
                                                class="form-control"
                                                required="">
                                     </div>
-                                    <div class="form-group col-sm-3">
+                                    <div class="form-group small-3 columns">
                                         <label for="creditCard-cvc" class="control-label">CVC</label>
                                         <input type="text"
                                                name="creditCard[cvc]"
@@ -303,7 +303,7 @@
                                 </div>
 
                                 <div class="row">
-                                    <div class="form-group col-sm-3">
+                                    <div class="form-group small-3 columns">
                                         <label for="creditCard-expirationMonth" class="control-label">Expires</label>
                                         <select name="creditCard[expirationMonth]"
                                                 id="'creditCard-expirationMonth"
@@ -314,7 +314,7 @@
                                             {% endfor %}
                                         </select>
                                     </div>
-                                    <div class="form-group col-sm-3">
+                                    <div class="form-group small-3 columns">
                                         <label for="creditCard-expirationYear" class="control-label">&nbsp;</label>
                                         <select name="creditCard[expirationYear]"
                                                 id="'creditCard-expirationYear"
@@ -325,17 +325,17 @@
                                             {% endfor %}
                                         </select>
                                     </div>
-                                    <div class="span6" id="accepted-cards">
+                                    <div class="small-6 columns" id="accepted-cards">
                                         <img src="/asset/kohana-kommerce/img/cards.png" width="180" height="24" style="width: 180px; height: 24px;" alt="Credit cards accepted: Visa, Mastercard, American Express, Discover" />
                                     </div>
                                 </div>
                             </div>
                         {% endif %}
 
-                        <button class="btn btn-primary btn-lg pull-left" type="submit" data-loading-text="Loading...">
+                        <button class="button primary btn-lg left" type="submit" data-loading-text="Loading...">
                             <i class="fa fa-lock"></i> Place your order
                         </button>
-                        <div class="pull-right">
+                        <div class="right">
                             {% embed "helper/secure_logos.twig" only %}{% endembed %}
                         </div>
                     </form>
