--- a/themes/base-foundation/templates/helper/checkout_button.twig
+++ b/themes/base-foundation/templates/helper/checkout_button.twig
@@ -1,3 +1,3 @@
-<a class="btn btn-primary" href="/checkout/pay">
+<a class="button primary" href="/checkout/pay">
     Secure Checkout <i class="fa fa-arrow-circle-right"></i>
 </a>
