--- a/themes/base-foundation/templates/layout/parts/breadcrumbs.twig
+++ b/themes/base-foundation/templates/layout/parts/breadcrumbs.twig
@@ -1,7 +1,7 @@
 {% if breadcrumbs is defined %}
 <div class="container">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="column">
             <ol class="breadcrumb">
                 {# TODO:
                 <?php
