--- a/themes/base-foundation/templates/layout/parts/footer.twig
+++ b/themes/base-foundation/templates/layout/parts/footer.twig
@@ -1,7 +1,7 @@
 <div id="footer">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="column">
                 <a href="/conditions">Conditions of Use</a>
                 | <a href="/privacy">Privacy</a>
                 {# TODO: <?=SITE_COPY?> #}
