--- a/themes/base-foundation/templates/layout/parts/head.twig
+++ b/themes/base-foundation/templates/layout/parts/head.twig
@@ -5,10 +5,11 @@
 <link rel="icon" href="/favicon.ico" />
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="canonical" href="{{ canonicalUrl }}" />
-{#<link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">#}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation-flex.css">{# Fix images#}
-<style>
-    img {
-        max-width: 100%;
-    }
-</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.css">
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.js"></script>
+
+<script>
+    $(document).foundation();
+</script>
