--- a/themes/base-foundation/templates/layout/parts/header.twig
+++ b/themes/base-foundation/templates/layout/parts/header.twig
@@ -1,51 +1,17 @@
-<div id="header">
-    <div class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <i class="glyphicon glyphicon-align-justify"></i>
-                </button>
-                <a class="navbar-brand" href="/">{{ SITE_NAME }}</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right text-center">
-                    <li class="divider-vertical hidden-xs"></li>
-                    <li>
-                        <a href="/login">Sign In</a>
-                    </li>
-
-                    <li class="divider-vertical hidden-xs"></li>
-
-                    <li>
-                        <a href="/cart">
-                            <i class="glyphicon glyphicon-shopping-cart"></i>
-                            Cart
-                        </a>
-                    </li>
-                </ul>
-
-                <div class="col-sm-3 navbar-right">
-                    <form action="/search"
-                          method="get"
-                          class="navbar-form"
-                          role="search">
-                        <div class="input-group">
-                            <input type="text"
-                                   name="q"
-                                   class="form-control"
-                                   placeholder="search"
-                                   value="{{ searchQuery }}" />
-
-                            <div class="input-group-btn">
-                                <button type="submit" class="btn btn-default search-button">
-                                    <i class="glyphicon glyphicon-search"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+<div class="top-bar">
+    <div class="top-bar-left">
+        <ul class="menu">
+            <li class="menu-text">Kommerce Foundation 6</li>
+            <li><a href="#">One</a></li>
+            <li><a href="#">Two</a></li>
+        </ul>
+    </div>
+    <div class="top-bar-right">
+        <ul class="menu">
+            <li><a href="#">Three</a></li>
+            <li><a href="#">Four</a></li>
+            <li><a href="#">Five</a></li>
+            <li><a href="#">Six</a></li>
+        </ul>
     </div>
 </div>
-<div style="clear: both;"></div>
