--- a/themes/base/templates/layout/parts/flash_messages.twig
+++ b/themes/base/templates/layout/parts/flash_messages.twig
@@ -10,13 +10,13 @@
                                 <button type="button" class="close" data-dismiss="alert">&times;</button>
 
                                 {% if type == 'success' %}
-                                    <i class="fa fa-ok-sign"></i>
+                                    <i class="fa fa-check-circle"></i>
                                 {% elseif type == 'info' %}
-                                    <i class="fa fa-info-sign"></i>
+                                    <i class="fa fa-info-circle"></i>
                                 {% elseif type == 'warning' %}
-                                    <i class="fa fa-warning-sign"></i>
+                                    <i class="fa fa-exclamation-triangle"></i>
                                 {% elseif type == 'danger' %}
-                                    <i class="fa fa-exclamation-sign"></i>
+                                    <i class="fa fa-exclamation-circle"></i>
                                 {% endif %}
 
                                 {{ message }}
