--- a/themes/base-bootstrap/templates/helper/product_grid_small.twig
+++ b/themes/base-bootstrap/templates/helper/product_grid_small.twig
@@ -1,13 +1,13 @@
 {% for product in products %}
     <div class="product-container-small {% if lg_slim %}col-md-12{% endif %} col-sm-3 col-xs-6">
-        <a href="{{ product.url }}">
+        <a href="{{ productUrl(product) }}">
             {% if product.defaultImage is empty %}
                 <img src="http://lorempixel.com/640/480" style="height: 110px">
             {% else %}
                 <img src="{{ product.defaultImage }}" style="height: 110px">
             {% endif %}
         </a>
-        <a href="{{ product.url }}">
+        <a href="{{ productUrl(product) }}">
             <div class="product-name">{{ product.name }}</div>
         </a>
 
