Fixing page title in nested include.

--- a/themes/base-bootstrap/templates/cart/show.twig
+++ b/themes/base-bootstrap/templates/cart/show.twig
@@ -2,7 +2,7 @@
 {# @var recommendedProducts \inklabs\kommerce\EntityDTO\ProductDTO[] #}
 {% extends "layout/base.twig" %}
 
-{% block title %}Shopping Cart{% endblock %}
+{% block pageTitle %}Shopping Cart{% endblock %}
 
 {% block content %}
     <div id="cart">
