--- a/themes/base-bootstrap/templates/checkout/pay.twig
+++ b/themes/base-bootstrap/templates/checkout/pay.twig
@@ -9,7 +9,7 @@
 
 {% extends "layout/base-checkout.twig" %}
 
-{% block title %}Checkout{% endblock %}
+{% block pageTitle %}Checkout{% endblock %}
 
 {% block content %}
     <div id="checkout">
