--- a/themes/base-bootstrap/templates/product/show.twig
+++ b/themes/base-bootstrap/templates/product/show.twig
@@ -2,8 +2,8 @@
 {# @var relatedProducts \inklabs\kommerce\EntityDTO\ProductDTO[] #}
 {% extends "layout/base.twig" %}
 
-{% block title %}{{ product.name }}{% endblock %}
-{% block description %}{{ product.description }}{% endblock %}
+{% block pageTitle %}{{ product.name }}{% endblock %}
+{% block pageDescription %}{{ product.description }}{% endblock %}
 
 {% block content %}
     <div class="container">
