--- a/themes/base-bootstrap/templates/cart/added.twig
+++ b/themes/base-bootstrap/templates/cart/added.twig
@@ -3,7 +3,7 @@
 {# @var recommendedProducts \inklabs\kommerce\EntityDTO\ProductDTO[] #}
 {% extends "layout/base.twig" %}
 
-{% block title %}{{ cartItem.product.name }}{% endblock %}
+{% block pageTitle %}{{ cartItem.product.name }}{% endblock %}
 
 {% block content %}
     <div id="cart-added">
@@ -12,11 +12,11 @@
                 <div class="col-sm-5">
                     <div class="thumbnail">
                         <div class="pull-left" style="margin-right: 10px">
-                            <a href="<?=$cartItem->product->url?>">
+                            <a href="{{ productUrl(cartItem.product) }}">
                                 <img src="{{ cartItem.product.defaultImage }}" width="110" height="110" />
                             </a>
                         </div>
-                        <a href="{# TODO: <?=$cartItem->product->url?>#}">
+                        <a href="{{ productUrl(cartItem.product) }}">
                             <div class="product-name">{{ cartItem.product.name }}</div>
                         </a>
 
