--- a/themes/base-bootstrap/templates/layout/base-checkout.twig
+++ b/themes/base-bootstrap/templates/layout/base-checkout.twig
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% include 'layout/parts/head.twig' %}
+    {% include 'layout/parts/head.twig' with {
+        'pageTitle': block('pageTitle'),
+        'pageDescription': block('pageDescription')
+    } %}
 </head>
 <body>
-{% include 'layout/parts/header-checkout.twig' %}
-{% include 'layout/parts/flash_messages.twig' %}
-{% include 'layout/parts/breadcrumbs.twig' %}
-<div id="body">
-    {% block content %}{% endblock %}
-</div>
-{% include 'layout/parts/base_modal.twig' %}
-{% include 'layout/parts/footer.twig' %}
+    {% include 'layout/parts/header-checkout.twig' %}
+    {% include 'layout/parts/flash_messages.twig' %}
+    {% include 'layout/parts/breadcrumbs.twig' %}
+    <div id="body">
+        {% block content %}{% endblock %}
+    </div>
+    {% include 'layout/parts/base_modal.twig' %}
+    {% include 'layout/parts/footer-checkout.twig' %}
 </body>
 </html>
