--- a/themes/base-bootstrap/templates/layout/base.twig
+++ b/themes/base-bootstrap/templates/layout/base.twig
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% include 'layout/parts/head.twig' %}
+    {% include 'layout/parts/head.twig' with {
+        'pageTitle': block('pageTitle'),
+        'pageDescription': block('pageDescription')
+    } %}
 </head>
 <body>
     {% include 'layout/parts/header.twig' %}
@@ -11,6 +14,6 @@
         {% block content %}{% endblock %}
     </div>
     {% include 'layout/parts/base_modal.twig' %}
-    {% include 'layout/parts/footer-checkout.twig' %}
+    {% include 'layout/parts/footer.twig' %}
 </body>
 </html>
