--- a/themes/base-bootstrap/templates/layout/parts/head.twig
+++ b/themes/base-bootstrap/templates/layout/parts/head.twig
@@ -1,7 +1,9 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="description" content="{% block description %}{% endblock %}">
-<title>{% block title %}{% endblock %} - Zen Kommerce</title>
+{% if pageDescription is not empty %}
+    <meta name="description" content="{{ pageDescription }}">
+{% endif %}
+<title>{% if pageTitle is empty %}Zen Kommerce{% else %}{{ pageTitle }} - Zen Kommerce{% endif %}</title>
 <link rel="icon" href="/favicon.ico" />
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="canonical" href="{{ canonicalUrl }}" />
