--- a/themes/base-foundation/templates/layout/base.twig
+++ b/themes/base-foundation/templates/layout/base.twig
@@ -4,13 +4,14 @@
     {% include 'layout/parts/head.twig' %}
 </head>
 <body>
-    {% include 'layout/parts/header.twig' %}
-    {% include 'layout/parts/flash_messages.twig' %}
+    {% include 'layout/parts/topbar.twig' %}
+    {% include 'layout/components/flash-messages.twig' %}
     {% include 'layout/parts/breadcrumbs.twig' %}
     <div id="body">
         {% block content %}{% endblock %}
     </div>
-    {% include 'layout/parts/base_modal.twig' %}
+    {% include 'layout/components/base-modal.twig' %}
+    {% include 'layout/parts/scripts.twig' %}
     {% include 'layout/parts/footer-checkout.twig' %}
 </body>
 </html>
