Adding tag and pagination.

--- a/themes/base-bootstrap/scss/_pagination.scss
+++ b/themes/base-bootstrap/scss/_pagination.scss
@@ -1,2 +1,2 @@
-.pagination { margin: 0; }
-.pagination-well { margin: 0; }
+.pagination { margin: 0 !important }
+.pagination-well { margin: 0 !important; }
