--- a/themes/base-bootstrap/templates/layout/base.twig
+++ b/themes/base-bootstrap/templates/layout/base.twig
@@ -11,6 +11,7 @@
     {% include 'layout/parts/header.twig' %}
     {% include 'layout/parts/flash_messages.twig' %}
     {% include 'layout/parts/breadcrumbs.twig' %}
+    {#{% include 'macros/macros.twig' %}#}
     <div id="body">
         {% block content %}{% endblock %}
     </div>
