--- a/themes/base-bootstrap/templates/layout/parts/header.twig
+++ b/themes/base-bootstrap/templates/layout/parts/header.twig
@@ -1,51 +1,47 @@
-<div id="header">
-    <div class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <i class="fa fa-align-justify"></i>
-                </button>
-                <a class="navbar-brand" href="/">{{ SITE_NAME }}</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right text-center">
-                    <li class="divider-vertical hidden-xs"></li>
-                    <li>
-                        <a href="/login">Sign In</a>
-                    </li>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">{{ SITE_NAME | default('Kommerce') }}</a>
+        </div>
 
-                    <li class="divider-vertical hidden-xs"></li>
-
-                    <li>
-                        <a href="/cart">
-                            <i class="fa fa-shopping-cart"></i>
-                            Cart
-                        </a>
-                    </li>
-                </ul>
-
-                <div class="col-sm-3 navbar-right">
-                    <form action="/search"
-                          method="get"
-                          class="navbar-form"
-                          role="search">
-                        <div class="input-group">
-                            <input type="text"
-                                   name="q"
-                                   class="form-control"
-                                   placeholder="search"
-                                   value="{{ searchQuery }}" />
-
-                            <div class="input-group-btn">
-                                <button type="submit" class="btn btn-default search-button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Link</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/login">Sign In</a></li>
+                <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+            </ul>
+            <form  action="/search"
+                   method="get"
+                   class="navbar-form navbar-right"
+                   role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search" value="{{ searchQuery }}">
                 </div>
-            </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
         </div>
     </div>
-</div>
-<div style="clear: both;"></div>
+</nav>
