--- a/themes/base-foundation/templates/layout/base/head.twig
+++ b/themes/base-foundation/templates/layout/base/head.twig
@@ -7,3 +7,4 @@
 <link rel="canonical" href="{{ canonicalUrl }}"/>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.css">
+<link rel="stylesheet" href="/s?p=main.scss&formatter=compact">
