--- a/themes/base-foundation/templates/product/show.twig
+++ b/themes/base-foundation/templates/product/show.twig
@@ -2,194 +2,11 @@
 {# @var relatedProducts \inklabs\kommerce\EntityDTO\ProductDTO[] #}
 {% extends "layout/base.twig" %}
 
-{% block title %}{{ product.name }}{% endblock %}
-{% block description %}{{ product.description }}{% endblock %}
+{% block pageTitle %}{{ product.name }}{% endblock %}
+{% block pageDescription %}{{ product.description | nl2br }}{% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row" id="product">
-            <div class="medium-9 small-12 columns">
-                <div class="row">
-                    <div class="small-5 columns text-center" id="product-image-container">
-                        <img id="product-image" src="{{ product.defaultImage }}" />
-                        {% if product.images is not empty %}
-                            <div class="row" style="margin-top: 5px">
-                                <div class="large-3 small-4 columns">
-                                    <a href="{{ product.defaultImageUrl }}" class='product-image'>
-                                        <img src="{{ product.defaultImageUrl }}" style="width: 100px;" />
-                                    </a>
-                                </div>
-                                {% for image in product.images %}
-                                    {% if image.path != product.defaultImage %}
-                                        <div class="large-3 small-4 columns">
-                                            <a href="{{ image.pathUrl }}" class='product-image'>
-                                                <img src="{{ image.pathUrl }}" style="width: 100px;" />
-                                            </a>
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                            </div>
-                        {% endif %}
 
-                        {% if product.rating is not null %}
-                            <div class="divider"></div>
+    Product
 
-                            <div class="review-actions">
-                                {# TODO: Render Rating Stars for product.rating #}
-                                {# TODO: Render Reviews #}
-                            </div>
-                        {% endif %}
-                    </div>
-
-                    <div class="small-7 columns">
-                        <h1>{{ product.name }}</h1>
-
-                        {% if product.isInventoryRequired %}
-                            <div class="availability" style="margin-top: 20px; margin-bottom: 5px">Availability:
-                                {% if product.quantity > 0 %}
-                                    <span class="in-stock">In stock</span>
-                                {% else %}
-                                    <span class="out-of-stock">Out of stock</span>
-                                {% endif %}
-                            </div>
-                        {% endif %}
-
-                        {% embed "helper/price.twig" with {'price': product.price } only %}{% endembed %}
-                        <br />
-
-                        {% if product.productQuantityDiscounts is not empty %}
-                            <div class="divider"></div>
-                            <div class="discount-prices">
-                                {# TODO:
-                                    <?php foreach (array_reverse($product->productQuantityDiscounts) as $discount) { ?>
-                                        Buy <?=$discount->quantity?> or more for
-
-                                        <?php if ($product->price->unitPrice < $discount->price->unitPrice) { ?>
-                                            <span class="price-strike"><?=Kommerce::display_price($discount->price->unitPrice)?></span>
-                                            <?=Kommerce::display_price($product->price->unitPrice)?>
-                                        <?php } else { ?>
-                                            <?=Kommerce::display_price($discount->price->unitPrice)?>
-                                        <?php } ?>
-
-                                        each
-                                        <br />
-                                    <?php } ?>
-                                #}
-                            </div>
-                        {% endif %}
-
-                        {% if product.isInStock %}
-                            <form action="/cart/add-item"
-                                  id="cart_add_item"
-                                  class="form-inline"
-                                  method="post">
-
-                                <input type="hidden" name="_token" value="{{ CSRF_TOKEN }}">
-                        {% endif %}
-
-                        {% if product.options is not empty or product.textOptions is not empty %}
-                            <div class="divider"></div>
-                            <div class="actions">
-                                {# TODO:
-                                    <?php foreach($product->options as $option) { ?>
-                                    <div class="row">
-                                        <div class="small-12">
-                                            <div class="control-group">
-                                                <?=View::factory('product/options')->set([
-                                                'option' => $option
-                                                ])?>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <?php } ?>
-                                    <?php foreach($product->textOptions as $textOption) { ?>
-                                    <div class="row">
-                                        <div class="small-12">
-                                            <div class="control-group">
-                                                <?=View::factory('product/text_options')->set([
-                                                'textOption' => $textOption
-                                                ])?>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <?php } ?>
-                                #}
-                            </div>
-                        {% endif %}
-
-                        {% if product.isInStock %}
-                            <div class="divider"></div>
-                            <div class="actions">
-                                <input type="hidden" name="id" value="{{ product.id.getHex() }}" />
-                                <button type="submit" class="button success right">
-                                    <i class="fa fa-shopping-cart"></i> Add to Cart
-                                </button>
-                                <div class="input-group input-group-sm small-4 small-3 columns">
-                                    <span class="input-group-addon"><label for="quantity">Qty:</label></span>
-                                    <input class="form-control quantity" type="text" id="quantity" name="quantity" value="1" />
-                                </div>
-                            </div>
-                            </form>
-                        {% endif %}
-
-                        {% if product.description is not empty %}
-                            <div class="divider"></div>
-                            <dl>
-                                <dt class="description-info">Description</dt>
-                                <dd class="description-desc">{{ product.description | nl2br }}</dd>
-                            </dl>
-                        {% endif %}
-
-                        {% if product.tags is not empty %}
-                            <div class="divider"></div>
-                            {% for tag in product.tags if tag.isVisible %}
-                                {% if tag.description is not empty %}
-                                    <dl>
-                                        <dt class="tag-info">
-                                            <a href="{{ tag.url }}">
-                                                {{ tag.name }}
-                                            </a>
-                                        </dt>
-                                        <dd class="tag-desc">
-                                            {{ tag.description | nl2br }}
-                                        </dd>
-                                    </dl>
-                                {% endif %}
-                            {% endfor %}
-                        {% endif %}
-
-                        <div class="divider"></div>
-
-                        <div class="other-actions">
-                            <div id="social-actions">
-                                <a  href="https://www.facebook.com/sharer/sharer.php?u={{ product.fullUrl }}"
-                                    class="button primary btn-xs facebook-share"
-                                    target="_blank">
-                                    <i class="glyphicon glyphicon-share"></i> Share on Facebook</a>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                {# TODO:
-                <?php if ( ! empty($reviews)) { ?>
-                <div class="small-9" id="reviews">
-                    <h2>Reviews</h2>
-                </div>
-                <?php } ?>
-                #}
-            </div>
-
-            <div class="medium-3 small-12 columns">
-                {% if relatedProducts is not empty %}
-                    <h2 class="text-center">You Might Also Like</h2>
-
-                    {% embed "helper/product_grid_small.twig" with {'products': relatedProducts, 'lg_slim': true } only %}
-                    {% endembed %}
-
-                {% endif %}
-            </div>
-        </div>
-    </div>
 {% endblock %}
